Exercício Flex Box

--- a/exercicio2.html
+++ b/exercicio2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 2 Flex Box</title>
     <link rel="stylesheet" href="ex2.css">
+    <link rel="icon" type="image/x-icon" href="Imagem/2111122.png">
 </head>
 <body>
     <div class="container">
