--- a/exercicio1.html
+++ b/exercicio1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercício 1 Flex Box</title>
     <link rel="stylesheet" href="ex1.css">
+    <link rel="icon" type="image/x-icon" href="Imagem/2111122.png">
 </head>
 <body>
 
